--- a/css/style.css
+++ b/css/style.css
@@ -954,6 +954,11 @@ section {
     margin-top: 10px;
 }
 
+/* Hidden honeypot field for spam protection */
+.hidden {
+    display: none;
+}
+
 @media (max-width: 992px) {
     .contact-form form {
         margin-top: 30px;
